; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-index-ram.c_get_write_pos.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-index-ram.c_get_write_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wptr = common dso_local global i32 0, align 4
@wptr0 = common dso_local global i32 0, align 4
@metafile_pos = common dso_local global i32 0, align 4
@write_pos = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @get_write_pos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_write_pos() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @wptr, align 4
  %3 = load i32, i32* @wptr0, align 4
  %4 = sub nsw i32 %2, %3
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @wptr, align 4
  store i32 %5, i32* @wptr0, align 4
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* @metafile_pos, align 4
  %8 = add nsw i32 %7, %6
  store i32 %8, i32* @metafile_pos, align 4
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = load i64, i64* @write_pos, align 8
  %12 = add nsw i64 %11, %10
  store i64 %12, i64* @write_pos, align 8
  ret i64 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
